--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,4 +1,4 @@
-<form action="opt-in-test.herokuapp.com/confirmEmail" method="post">
+<form action="https://opt-in-test.herokuapp.com/confirmEmail" method="post">
 	<span>Email: </span>
 	<input type="text" name="email" placeholder="hello@example.com" />
 	<input type="submit" value="submit" />
